--- a/_data/projects/en.yml
+++ b/_data/projects/en.yml
@@ -21,11 +21,11 @@
   before:
     image: '/assets/images/projects/Roy/Roy1.jpg'
     credits: 'Maryse Lavoie'
-    alt: ""
+    alt: "Terasses Roy - before"
   after:
     image: '/assets/images/projects/Roy/Roy2.jpg'
     credits: 'Christine Kerrigan'
-    alt: ""
+    alt: "Terasses Roy - after"
   brief: "The project removed traffic noise and created a new pedestrian walkway / seating area in a space where previously there was only a road.<br><br> It also created a new neighborhood space of meeting, often used by residents and visitors alike, who appreciate the greenery, increased sense of safety due to lack of cars, and the ‘quieter’ soundscape where cars are only audible in the distance."
   about: "We collaborated with Ville de Montreal around the pedestrianization of rue Roy, in the heart of the Plateau-Mont-Royal borough. To create the Terrasses Roy, a section of the street was closed off to traffic and a temporary design was installed by design firm Castor et Pollux in the summer 2017. Four sections were created to invite visitors to relax and interact, including colourful street furniture, communal gardens, and a play area. This pilot project was very well received by the community and extended into the fall and winter of 2017. The space is currently being converted into a permanent outdoor meeting space around urban agriculture."
 
@@ -74,7 +74,7 @@
   before:
     image: '/assets/images/projects/ValeursGuide/VG1.png'
     credits: 'Christopher Trudeau'
-    alt: ""
+    alt: "Distribution of reviewed noise policies."
   after:
     image: '/assets/images/projects/ValeursGuide/VG_Bruit chantiers_JL.jpg'
     credits: 'Josée Laplace'
